--- a/src/scss/_default.scss
+++ b/src/scss/_default.scss
@@ -11,12 +11,12 @@ html {
 }
 
 body {
- position: relative;
+ position: relative; // эти 2 свойсвта скрывате не вмещающиеся элементы(чтоб гор скролл не появлляся)
  overflow-x: hidden;
  min-width: 320px;
- min-height: 100vh;
+ min-height: 100vh;  // расятгиватся на всю высоту экрана
  font-family: Arial, sans-serif;
- -webkit-font-smoothing: antialiased;
+ -webkit-font-smoothing: antialiased;// эти сво-ва нужны для оптимизации отображени шрифта в разн устройствх
  -moz-osx-font-smoothing: grayscale;
  text-rendering: optimizeLegibility;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
@@ -29,8 +29,8 @@ body {
 
 img,
 svg {
- display: block;
- max-width: 100%;
+ display: block; // чтоб под  картинкой не было отсутпа
+ max-width: 100%; // чтоб картинки не выпадали из родителя
  height: auto;
 }
 
@@ -90,7 +90,7 @@ iframe {
 */
 
 .container {
- max-width: 1240px;
- padding: 0 30px;
+ max-width: 1404px; // 1300(контент)+52(padding)*2
+ padding: 0 52px;
  margin: 0 auto;
 }
