--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,4 +1,10 @@
-@import "default";  // импорт default.scss
-//либо можно так на современном синтасисе @use "default" as *; // загружем все стили из  default.scss
-@import 'normalize.css';  // normalize.css -нзв пакета
-
+//@import "default";  // импорт _default.scss(старый синтаксис)
+//либо можно так на современном синтасисе:
+@use "default" as *; // загружем все стили из  default.scss
+@use "components/header" as *;
+@use "components/hero" as *;
+@use "components/about" as *;
+@use "components/advantages" as *;
+@use "components/subscribe" as *;
+@use "components/footer" as *;
+@import "normalize.css";  // normalize.css - нзв пакета
