--- a/src/scss/components/_about.scss
+++ b/src/scss/components/_about.scss
@@ -47,5 +47,10 @@
 
     &__text {
         padding: 10px 24px;
+        margin-bottom: 16px;
+
+        &:last-child {
+            margin-bottom: 0;
+        }
     }
 }
