--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -8,8 +8,8 @@
     padding-right: 0;
     background-color: $purple;
     color: $light;
-    background-image: url('../../img/bg-dog@1x.png'), url('../../img/pattern.svg'); // img/pattern.svg
-    background-size: contain, cover; // для 1ой картинки contain, для 2ой cover(чтоб картинка растянулась на весь экран). 
+    background-image: url('/img/bg-dog@1x.png'), url('/img/pattern.svg'); //  для Vite путь будет от /img, иначе в dist не будут рабоать
+    background-size: contain, cover; // для 1-ой картинки contain, для 2-ой cover(чтоб картинка растянулась на весь экран). 
     background-position: right, center; // песель справа, фоновая картинка по уентру
     background-repeat: no-repeat;
 
