--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,13 +1,40 @@
+@use '../media' as *;
+
+
 .header {
     position: absolute; // позиционируем относительно body
-    top: 0;
+    top: 50px;
     left: 0;
     right: 0;
     z-index: 10; // чтоб сверху был
-    // background-color: ;
+
+    // вызов миксина
+    @include laptop {
+
+        top: 40px;
+    }
+
+    @include tablet {
+        top: 32px;
+    }
+
+    @include mobile {
+        top: 22px;
+    }
+
 
     &__logo {
         width: 337px;
         padding-top: 50px;
+
+        @include laptop {
+            width: 331px;
+        }
+
+        @include tablet {
+            width: 200px;
+        }
+
+        @include mobile {}
     }
 }
