--- a/src/scss/components/_about.scss
+++ b/src/scss/components/_about.scss
@@ -26,14 +26,13 @@
         line-height: 1.3;
         text-align: center;
 
-
         @include laptop {
+            margin-bottom: 32px;
             font-size: 44px;
         }
 
-        @include tablet {}
-
         @include mobile {
+            margin-bottom: 16px;
             font-size: 30px;
         }
     }
@@ -65,8 +64,8 @@
             @include tablet {
                 width: 408px;
                 max-width: 100%;
-                flex-basis: 319px;
                 height: auto;
+                flex-basis: 319px;
                 transform: translateY(0);
             }
 
@@ -75,22 +74,21 @@
                 flex-basis: 191px;
                 background-image: url('../../img/cat-mobile@1x.png');
             }
-
         }
-
-        @include laptop {}
 
         @include tablet {
             flex-direction: column;
         }
-
-        @include mobile {}
     }
 
 
     &__content {
         // флекс сэлемент
         flex-basis: 50%;
+
+        @include tablet {
+            padding: 10px 0;
+        }
     }
 
 
