--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -15,6 +15,7 @@
     background-repeat: no-repeat;
 
     @include laptop {
+        //  вызов миксина
         // <1140;
         padding: 148px 0 172px;
         margin-bottom: 32px;
