--- a/src/scss/components/_subscribe.scss
+++ b/src/scss/components/_subscribe.scss
@@ -1,9 +1,18 @@
 @use '../variables' as *;
 @use '../fonts' as *;
+@use '../media' as *;
+
 
 .subscribe {
-
     padding: 120px 0;
+
+    @include laptop {
+        padding: 100px 0;
+    }
+
+    @include mobile {
+        padding: 80px 0;
+    }
 
 
     &__form {
@@ -11,6 +20,7 @@
         flex-direction: column;
         align-items: center;
     }
+
 
     &__title {
         max-width: 1000px;
@@ -20,7 +30,17 @@
         line-height: 1.3;
         text-align: center;
         color: $green;
+
+        @include laptop {
+            margin-bottom: 32px;
+            font-size: 44px;
+        }
+
+        @include mobile {
+            font-size: 30px;
+        }
     }
+
 
     &__fieldset {
         // fieldset
@@ -31,6 +51,7 @@
         padding: 0;
         border: none;
     }
+
 
     &__input {
         width: 100%;
@@ -45,7 +66,13 @@
         &::placeholder {
             opacity: 0.4;
         }
+
+        @include tablet {
+            font-size: 20px;
+        }
+
     }
+
 
     &__button {
         position: absolute;
@@ -53,9 +80,12 @@
         top: 0;
         bottom: 0;
         display: flex;
+        justify-content: center;
         align-items: center;
         gap: 4px;
+        min-width: 209px;
         padding: 16px 24px;
+
         border: 1px solid transparent;
         border-radius: 40px;
         background-color: $purple;
@@ -64,13 +94,31 @@
         color: $light;
 
         &::after {
-            // флекс элемент
-            // стрелка
+            // псевдоэлемент-стрелка, флекс элемент
             content: '';
             display: block;
             width: 16px;
             height: 16px;
             background-image: url('/img/arrow.svg');
+        }
+
+        @include mobile {
+            min-width: 54px;
+            min-height: 54px;
+            padding: 19px;
+            // border-radius: 50%;
+        }
+
+    }
+
+
+    &__button-text {
+
+        @include mobile {
+            //display: none;
+            // доступно скрываем:
+            position: fixed;
+            transform: scale(0);
         }
     }
 }
