--- a/src/scss/_default.scss
+++ b/src/scss/_default.scss
@@ -100,6 +100,11 @@ iframe {
     padding: 0 52px;
     margin: 0 auto;
 
+    @include bigscreen {
+        max-width: 1600px;
+        padding: 0 60px;
+    }
+
     @include tablet {
         padding: 0 46px;
     }
