--- a/src/scss/_media.scss
+++ b/src/scss/_media.scss
@@ -1,8 +1,16 @@
+$bigscreen: 1600px;
 $laptop: 1140px;
 $tablet: 940px;
 $mobile: 520px;
 
 // миксины
+
+@mixin bigscreen {
+    @media (min-width: $bigscreen) {
+        @content;
+    }
+}
+
 @mixin laptop {
     @media (max-width: $laptop) {
         @content;
