--- a/src/scss/components/_advantages.scss
+++ b/src/scss/components/_advantages.scss
@@ -21,7 +21,7 @@
                 url('/img/dog@1x.webp') type('image/webp') 1x,
                 url('/img/dog@2x.webp') type('image/webp') 2x,
                 url('/img/dog@1x.png') type('image/png') 1x,
-                url('/img/dog@2x.png') type('image/png') 2x); // для dpr:2.0(ретиновые экраны) подгрузится dog@2x.png
+                url('/img/dog@2x.png') type('image/png') 2x); // 2x для dpr:2.0(ретиновые экраны) подгрузится dog@2x.png, 1x для обычных дисплеев
 
         background-repeat: no-repeat;
         background-size: contain; //  чтоб картинка не обрезалась
@@ -109,8 +109,9 @@
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         gap: 24px;
-        // либо dislay: flex;
-        //      flex-basis: 417px либо 33%(100/3);
+        // либо 
+        // dislay: flex;
+        // flex-basis: 417px либо 33%(100/3);
 
         @include laptop {
             gap: 20px;
@@ -276,7 +277,6 @@
             width: 257px;
             height: 257px;
             background-image: url('/img/star-laptop.svg');
-
         }
 
         @include tablet {
