--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -6,6 +6,8 @@
 @use "components/about";
 @use "components/advantages";
 @use "components/subscribe";
+@use "components/store";
+@use "components/product";
 @use "components/footer";
 
 @import "normalize.css"; // normalize.css - нзв пакета
