--- a/src/scss/components/_store.scss
+++ b/src/scss/components/_store.scss
@@ -7,7 +7,12 @@
     padding-top: 120px;
     padding-bottom: 120px;
 
-    &__header {}
+    &__header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 40px;
+    }
 
     &__categories {
         display: flex;
@@ -46,11 +51,50 @@
         }
     }
 
-    &__cart-button {}
+    &__cart-button {
+        position: relative;
+        display: block;
+        width: 28px;
+        height: 28px;
+    }
 
-    &__title {}
+    &__cart-count {
+        position: relative;
+        z-index: 999; //  чтоы цифра была поверх
+        font-weight: 700;
+        font-size: 12px;
+        line-height: 1;
+        text-align: center;
+        color: $light;
+    }
 
-    &__list {}
+    &__cart-icon {
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        z-index: 1;
+    }
+
+    &__title {
+        margin-bottom: 32px;
+        font-weight: 700;
+        font-size: 52px;
+        line-height: 1.3;
+        color: $green;
+    }
+
+    &__list {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, 420px); // repeat(auto-fit, 200px)   repeat(auto-fill, 200px) - занимает колонками все доступное пространство, когда элементы заканчиваютя он создает пустые колонки. repeat(auto-fit, minmax(100px, 300px))
+        gap: 20px;
+        justify-content: center;
+
+        @include mobile {
+            grid-template-columns: 1fr;
+        }
+    }
 
     &__item {}
 
