--- a/src/scss/components/_product.scss
+++ b/src/scss/components/_product.scss
@@ -22,7 +22,8 @@
     }
 
     &__image {
-        width: 100%;
+        // width: 100%;
+        align-self: center;
         margin-bottom: 16px;
     }
 
