--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -9,5 +9,6 @@
 @use "components/store";
 @use "components/product";
 @use "components/footer";
+@use "components/modal";
 
 @import "normalize.css"; // normalize.css - нзв пакета
