--- a/src/scss/components/_product.scss
+++ b/src/scss/components/_product.scss
@@ -55,7 +55,7 @@
         width: 100%;
         border-radius: 40px;
         padding: 16px 24px;
-        width: 388px;
+        max-width: 388px;
         height: 66px;
 
         background-color: $purple;
@@ -64,6 +64,12 @@
         text-align: center;
         font-weight: 700;
         color: $light;
+
+        @include mobile {
+            padding: 10px 14px;
+            height: 40px;
+            font-size: 20px;
+        }
     }
 
 }
