--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -1,7 +1,7 @@
 .modal-overlay {
     position: fixed;
     z-index: 999;
-    // растянется на всю ширину
+    // растянется на всю ширину:
     top: 0;
     left: 0;
     bottom: 0;
@@ -33,7 +33,7 @@
     &__cart-item {}
 }
 
-
+.modal__cart-items {}
 
 .title {}
 
